chg: fix layout alignement

--- a/src/app/kng-nav-marketplace/kng-nav-marketplace.component.scss
+++ b/src/app/kng-nav-marketplace/kng-nav-marketplace.component.scss
@@ -27,7 +27,11 @@ h3{
   }
 
   width: 100%;
-  margin-left: 0px;
+  margin-left: 10px;
+  @media (max-width:429px) {
+    margin-left: 0px;
+  }
+
   .container {
     display: flex;
     flex-flow: row nowrap;
