--- a/src/app/shared/kng-feedback/kng-feedback.component.scss
+++ b/src/app/shared/kng-feedback/kng-feedback.component.scss
@@ -25,7 +25,7 @@ p.block-info{
   -color: var(--mdc-theme-primary-text);
   margin-top: 0px;
   margin-bottom: 10px;
-  margin-left: -5px;
+  margin-left: 0px;
 }      
 
 
