--- a/src/styles/kng-theme.scss
+++ b/src/styles/kng-theme.scss
@@ -486,15 +486,16 @@ progress.kng-progress[value] {
 	border: none;
 	
 	/* Add dimensions */
-	width: 100%; height: 4px;
+	width: calc(100% - 10px); 
+  height: 6px;
 	
   background-color: whitesmoke;
-  border-radius: 3px;
+  border-radius: 0px;
   -box-shadow: 0 1px 3px rgba(0,0,0,.2) inset;
 
 	
 	position: relative;
-	margin: 0 0 1.5em; 
+	margin: 0px 5px 10px; 
 }
 
 
